--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,13 +1,10 @@
 <nav class="navbar navbar-expand-sm bg-dark navbar-dark">
   <ul class="navbar-nav">
     <li class="nav-item">
-      <a class="nav-link">Inicio</a>
+      <button class="btn btn-dark" (click)="irAlHome()">Inicio</button>
     </li>
     <li class="nav-item">
-      <a class="nav-link">Estudiantes</a>
-    </li>
-    <li class="nav-item">
-      <a class="nav-link">Inscripciones</a>
+      <button class="btn btn-dark" (click)="irAListadoEstudiantes()">Ver Estudiantes del centro</button>
     </li>
   </ul>
 </nav>
@@ -15,5 +12,5 @@
 <h1 class="text-center">{{ title }}</h1>
 
 <div class="container">
-  <router-outlet></router-outlet>  <!-- Esto renderizará las rutas dinámicas -->
+  <router-outlet></router-outlet> <!-- Aquí se cargará el componente correspondiente -->
 </div>
